2011-06-26 Erwin Waterlander <waterlan@xs4all.nl>
	* bugfix: dos2unix changes ownership and permissions on file.
	  When an other user (e.g. root) than the owner has write permission
	  on the input file, dos2unix changes owner, group and umask in old
	  file mode to the other user's owner, group and umask who runs
	  dos2unix. Thanks to Christopher Williams.

2011-06-16 Erwin Waterlander <waterlan@xs4all.nl>
	* Identical functions from dos2unix.c and unix2dos.c
	  are moved to common.c.

2011-06-15 Erwin Waterlander <waterlan@xs4all.nl>
	* Dos2unix and Unix2dos share the same language files.

2011-05-04 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c: Removed redundant ConvertDosToUnixOldFile().
	* unix2dos.c: Removed redundant ConvertUnixToDosOldFile().

2011-04-26 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3

2011-04-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Don't report an error when unlink() fails because a file
	  doesn't exist.

2011-04-13 Erwin Waterlander <waterlan@xs4all.nl>
	* Print system error when input file can't be openened.
	  For instance "Permission denied"
	* Update manuals.
	* Update translations.

2011-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Always print and return an error when wrong command-line
	  options are used. Also in quiet mode.
	* New option '--': Treat all following options as file names.

2011-04-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Improved error reporting. Return system error when an error occurs.
	* Don't quit after first error (like rm, ls, grep, tar).
	* In quiet mode the return value is always zero.

2011-03-27 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Check if symbolic links point to
	  regular files.
	* dos2unix.c/unix2dos.c: Added short options -F, -R, -S.
	* po: update translations.

2011-03-24 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c/unix2dos.c: Changed options --follow, --no-follow,
	  to  --follow-symlink,  --replace-symlink,  --skip-symlink.